update to 1.0.91-review-4

--- a/Source/Enter.Ui/Components/Buttons/EntButton.razor
+++ b/Source/Enter.Ui/Components/Buttons/EntButton.razor
@@ -26,7 +26,8 @@
 @code {
 
   
-
+    public override string ComponentName => nameof(EntButton);
+    
     [Parameter]
     public ButtonSize Size { get; set; } = ButtonSize.Medium;
 
@@ -65,4 +66,5 @@
         base.Dispose(disposing);
     }
 
+    
 }
