--- a/Source/Enter.Ui/Components/NavMenu/EntNavMenuTitle.razor
+++ b/Source/Enter.Ui/Components/NavMenu/EntNavMenuTitle.razor
@@ -7,7 +7,7 @@
 </EntText>
 
 @code {
-
+    public override string ComponentName => this.GetType().Name;
     [Parameter]
     public string Title { get; set; }
 
