--- a/Source/Enter.Ui/Components/Popover/EntPopoverProvider.razor
+++ b/Source/Enter.Ui/Components/Popover/EntPopoverProvider.razor
@@ -15,7 +15,7 @@
 </div>
 
 @code {
-
+    public override string ComponentName => this.GetType().Name;
     protected override void BuildClasses(ClassBuilder builder)
     {
         builder.AddClass("ent-popover-provider");
