--- a/Source/Enter.Ui/Components/Utilities/Division/EntDivision.razor
+++ b/Source/Enter.Ui/Components/Utilities/Division/EntDivision.razor
@@ -5,7 +5,7 @@
 
 @code {
 
-
+    public override string ComponentName => this.GetType().Name;
     protected override void BuildClasses(ClassBuilder builder)
     {
         builder.AddClass("d-division");
