--- a/Source/Enter.Ui/Components/List/EntList.razor
+++ b/Source/Enter.Ui/Components/List/EntList.razor
@@ -7,7 +7,7 @@
 </ul>
 
 @code {
-
+    public override string ComponentName => nameof(EntList);
     protected override void BuildClasses(ClassBuilder builder)
     {
     builder.
