--- a/Source/Enter.Ui/Components/Modal/EntMessageBox.razor
+++ b/Source/Enter.Ui/Components/Modal/EntMessageBox.razor
@@ -14,6 +14,7 @@
 
 @code {
 
+    public override string ComponentName => nameof(EntMessageBox);
     [CascadingParameter]
     public EntModal Modal { get; set; } = default!;
 
