--- a/Source/Enter.Ui/_Imports.razor
+++ b/Source/Enter.Ui/_Imports.razor
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Enter.Ui.Components
 @using Enter.Ui.Core
 @using Enter.Ui.Components
