--- a/Source/Enter.Ui/Styles/components/_ent_popover.component.scss
+++ b/Source/Enter.Ui/Styles/components/_ent_popover.component.scss
@@ -1,6 +1,6 @@
 ﻿.ent-popover-content {
   position: absolute;
-  z-index: var(--ent-z-index-top);
+  z-index: var(--ent-z-index-10);
 
 
   &.ent-popover-relative-width {
