--- a/Source/Enter.Ui/Components/Toast/EntToastProviders.razor
+++ b/Source/Enter.Ui/Components/Toast/EntToastProviders.razor
@@ -1,16 +1,16 @@
 ﻿@namespace Enter.Ui.Components
-@inherits Enter.Ui.Bases.EntBaseComponent
+@inherits Enter.Ui.Bases.EntResponsiveComponent
 @if (ToastList.Any())
 {
     @foreach (var positionGroupedToasts in ToastList.GroupBy(x => x.EntToastOptions.PositionClass))
     {
-        <div class="ent-toast-container @positionGroupedToasts.Key" @key="positionGroupedToasts.Key">
+        <div class="@ClassNames @positionGroupedToasts.Key" @key="positionGroupedToasts.Key">
             <CascadingValue Value=this IsFixed="true">
                 @foreach (var toast in positionGroupedToasts!.OrderBy(x => x.TimeStamp))
                 {
                     if (toast.CustomComponent is not null)
                     {
-                        <EntToast @key="toast" ToastId="toast.Id" Options="toast.EntToastOptions">
+                        <EntToast @key="toast" ToastId="toast.Id" Options="toast.EntToastOptions" ResponsiveMode="@ResponsiveMode">
                             @toast.CustomComponent
                         </EntToast>
                     }
