--- a/example/Enter.Dashboard/_Imports.razor
+++ b/example/Enter.Dashboard/_Imports.razor
@@ -9,3 +9,8 @@
 @using Enter.Ui.Components
 @using Enter.Dashboard.Shared
 @using Microsoft.AspNetCore.Components
+@using Enter.Dashboard.Model
+@using Enter.Ui.Components.Icon
+@using Enter.Ui.Components.Inputs
+@using System.ComponentModel.DataAnnotations
+@using Enter.Ui.Components.Button
