--- a/Source/Enter.Ui/Components/Tabs/EntMdiTab.razor
+++ b/Source/Enter.Ui/Components/Tabs/EntMdiTab.razor
@@ -4,7 +4,7 @@
         @attributes="@AdditionalAttributes"
         class="@ClassNames"
         ItemClass="@ItemClass"
-        ResponsiveMode="@ResponsiveMode"
+        Responsive="@Responsive"
         Direction="@Direction"
         ItemDirection="@ItemDirection"
         Expandable="@Expandable"
