--- a/Source/Enter.Ui/Components/Toast/EntToastProviders.razor
+++ b/Source/Enter.Ui/Components/Toast/EntToastProviders.razor
@@ -10,7 +10,7 @@
                 {
                     if (toast.CustomComponent is not null)
                     {
-                        <EntToast @key="toast" ToastId="toast.Id" Options="toast.EntToastOptions" ResponsiveMode="@ResponsiveMode">
+                        <EntToast @key="toast" ToastId="toast.Id" Options="toast.EntToastOptions" Responsive="@Responsive">
                             @toast.CustomComponent
                         </EntToast>
                     }
