fix auto responsive in toast

--- a/Source/Enter.Ui/Components/Toast/EntToastProviders.razor
+++ b/Source/Enter.Ui/Components/Toast/EntToastProviders.razor
@@ -20,6 +20,7 @@
                                        ToastId="toast.Id"
                                        Message="toast.Message"
                                        Level="toast.Level"
+                                       Responsive="@Responsive" AutoResponsive="@AutoResponsive"
                                        Options="toast.EntToastOptions"/>
                     }
                 }
