--- a/Source/Enter.Ui/Styles/base/_utility.scss
+++ b/Source/Enter.Ui/Styles/base/_utility.scss
@@ -92,38 +92,20 @@
 }
 
 @for $i from 1 through 12 {
+
   .col-#{$i} {
-    flex: 0 0 auto;
-    width: calc(#{$i} / 12 * 100%);
+    flex: 0 0 percentage($i/12);
+    width: percentage($i/12);
   }
 
-  @each $bp, $width in $breakpoints {
-    @media (min-width: $width) {
-
-      .#{$bp}\:col-#{$i} {
-        width: calc(#{$i} / 12 * 100%);
-        flex: 0 0 auto;
-      }
-    }
-  }
 }
 
-
-$extra-column: (1 \/2: calc(1 / 2 * 100%), 1 \/4: calc(1 / 4 * 100%), 1 \/3: calc(1 / 3 * 100%), 1 \/6: calc(1 / 6 * 100%), 2 \/3: calc(2 / 3 * 100%), 3 \/4: calc(3 / 4 * 100%), 5 \/6: calc(5 / 6 * 100%));
-
-
-@each $key, $w in $extra-column {
-  .col-#{$key} {
-    flex: 0 0 auto;
-    width: $w;
-  }
-
-  @each $bp, $width in $breakpoints {
+@each $bp, $width in $breakpoints {
+  @for $i from 1 through 12 {
     @media (min-width: $width) {
-
-      .#{$bp}\:col-#{$key} {
-        flex: 0 0 auto;
-        width: $w;
+      .#{$bp}\:col-#{$i} {
+        flex: 0 0 percentage($i/12);
+        width: percentage($i/12);
       }
     }
   }
