--- a/Source/Enter.Ui/Styles/base/_utility.scss
+++ b/Source/Enter.Ui/Styles/base/_utility.scss
@@ -94,7 +94,7 @@
 @for $i from 1 through 12 {
 
   .col-#{$i} {
-    flex: 0 0 percentage($i/12);
+    flex: 0 0 auto;
     width: percentage($i/12);
   }
 
@@ -104,7 +104,7 @@
   @for $i from 1 through 12 {
     @media (min-width: $width) {
       .#{$bp}\:col-#{$i} {
-        flex: 0 0 percentage($i/12);
+        flex: 0 0 auto;
         width: percentage($i/12);
       }
     }
