add floaon navigationmenu and fix nav menu style

--- a/example/Enter.Dashboard/Shared/DocumentLayout.razor
+++ b/example/Enter.Dashboard/Shared/DocumentLayout.razor
@@ -60,7 +60,11 @@
 <EntModalProvider/>
 <EntPopoverProvider/>
 <EntToastProviders AutoResponsive="true"/>
-
+<EntFloatingNavigationMenu AutoResponsive >
+    <EntFloatingNavigationMenuItem  Icon="EntIconName.Home"/>
+    <EntFloatingNavigationMenuItem Icon="EntIconName.Bars"/>
+    <EntFloatingNavigationMenuItem  Icon="EntIconName.Comment"/>
+</EntFloatingNavigationMenu>
 @code {
 
     private bool _showToggle;
