--- a/Source/Enter.Ui/Styles/variables/_border.variables.scss
+++ b/Source/Enter.Ui/Styles/variables/_border.variables.scss
@@ -5,6 +5,7 @@
   --ent-border-2: 2px;
   --ent-border-3: 3px;
   --ent-border-4: 4px;
+  --ent-border-8: 8px;
 
   --ent-border-radius-0: 0px;
   --ent-border-radius-1: 2px;
