--- a/example/Enter.Dashboard/Shared/DocumentLayout.razor
+++ b/example/Enter.Dashboard/Shared/DocumentLayout.razor
@@ -31,6 +31,7 @@
                         <EntNavMenuTextItem  Text="TreeView" Click="@(() => Navigate("/documents/treeview"))"/>
                         <EntNavMenuTextItem  Text="NavMenu" Click="@(() => Navigate("/documents/navmenu"))"/>
                         <EntNavMenuTextItem  Text="Table" Click="@(() => Navigate("/documents/datatable"))"/>
+                        <EntNavMenuTextItem  Text="Calendar" Click="@(() => Navigate("/documents/calendar"))"/>
                         <EntNavMenuTextItem  Text="Forms" Click="@(() => Navigate("/documents/form"))"/>
                         <EntNavMenuTextItem  Text="Pagination" Click="@(() => Navigate("/documents/pagination"))"/>
                         <EntNavMenuTextItem  Text="MdiTab" Click="@(() => Navigate("/documents/mdi-tabs"))"/>
