--- a/Source/Enter.Ui/Components/Calendar/EntCalendar.razor
+++ b/Source/Enter.Ui/Components/Calendar/EntCalendar.razor
@@ -1,38 +1,55 @@
 ﻿@namespace Enter.Ui.Components
+@using Enter.Ui.Components.Icon
 @inherits Enter.Ui.Bases.EntBaseComponent
-<h3>@currentDate.ToString("MMMM yyyy")</h3>
-<div class="calendar">
-    <div class="week">
-        <div class="day-header">Sun</div>
-        <div class="day-header">Mon</div>
-        <div class="day-header">Tue</div>
-        <div class="day-header">Wed</div>
-        <div class="day-header">Thu</div>
-        <div class="day-header">Fri</div>
-        <div class="day-header">Sat</div>
-    </div>
 
-    @foreach (var week in calendarDates)
-    {
+<div class="calendar-view">
+    <div class="actions">
+        <EntButton @onclick="BeforeMonth" class="controller" Icon="@EntIconName.ChevronLeft"></EntButton>
+        <b>
+            @currentDate.ToString("yyyy MMMM")
+        </b>
+        <EntButton @onclick="NextMonth" class="controller" Icon="@EntIconName.ChevronRight"></EntButton>
+    </div>
+    <div class="calendar">
         <div class="week">
-            @foreach (var date in week)
-            {
-                <div class="date @(date.Month == currentDate.Month ? "current-month" : "other-month")">
-                    @if (date != DateTime.MinValue)
-                    {
-                        @date.Day
-                    }
-                </div>
-            }
+            <div class="day-header">Sun</div>
+            <div class="day-header">Mon</div>
+            <div class="day-header">Tue</div>
+            <div class="day-header">Wed</div>
+            <div class="day-header">Thu</div>
+            <div class="day-header">Fri</div>
+            <div class="day-header">Sat</div>
         </div>
-    }
+
+        @foreach (var week in calendarDates)
+        {
+            <div class="week">
+                @foreach (var date in week)
+                {
+                    <div class="date 
+                                @(date.Month == currentDate.Month ? "current-month" : "other-month") @(date.Date == DateTime.Today ? "today" : "") @(date.Date == SelectedDate.Date ? "active" : "")" @onclick="() => SelectDate(date)">
+                        @if (date != DateTime.MinValue)
+                        {
+                            @date.Day
+                        }
+                    </div>
+                }
+            </div>
+        }
+    </div>
 </div>
 
+
 @code {
-    public override string ComponentName => this.GetType().Name;
+    public override string ComponentName => GetType().Name;
 
     private DateTime currentDate = DateTime.Now;
     private DateTime[][] calendarDates;
+
+    [Parameter]
+    public DateTime SelectedDate { get; set; } = default!;
+    [Parameter]
+    public EventCallback<DateTime> SelectedDateChanged { get; set; } = default!;
 
     protected override void OnInitialized()
     {
@@ -46,23 +63,23 @@
 
     private DateTime[][] GetCalendarDates(int year, int month)
     {
-        DateTime[][] dates = new DateTime[6][];
-        int daysInMonth = DateTime.DaysInMonth(year, month);
-        DateTime firstDayOfMonth = new DateTime(year, month, 1);
-        int offset = (int)firstDayOfMonth.DayOfWeek;
+        var dates = new DateTime[6][];
+        var daysInMonth = DateTime.DaysInMonth(year, month);
+        var firstDayOfMonth = new DateTime(year, month, 1);
+        var offset = (int)firstDayOfMonth.DayOfWeek;
 
-        // Calculate the first day to display in the calendar
-        DateTime startDate = firstDayOfMonth.AddDays(-offset);
+    // Calculate the first day to display in the calendar
+        var startDate = firstDayOfMonth.AddDays(-offset);
 
-        int currentDay = 1;
+        var currentDay = 1;
 
-        for (int i = 0; i < 6; i++)
+        for (var i = 0; i < 6; i++)
         {
             dates[i] = new DateTime[7];
 
-            for (int j = 0; j < 7; j++)
+            for (var j = 0; j < 7; j++)
             {
-                dates[i][j] = startDate.AddDays((i * 7) + j);
+                dates[i][j] = startDate.AddDays(i * 7 + j);
 
                 if (dates[i][j].Month == month)
                 {
@@ -73,4 +90,23 @@
 
         return dates;
     }
+
+    private async Task SelectDate(DateTime dt)
+    {
+        SelectedDate = dt;
+        await SelectedDateChanged.InvokeAsync(SelectedDate);
+    }
+
+    private async Task NextMonth()
+    {
+        currentDate = currentDate.AddMonths(1);
+        calendarDates = GetCalendarDates(currentDate.Year, currentDate.Month);
+    }
+
+    private async Task BeforeMonth()
+    {
+        currentDate = currentDate.AddMonths(-1);
+        calendarDates = GetCalendarDates(currentDate.Year, currentDate.Month);
+    }
+
 }
